# ffdyndns

./: .gitignore  .gitlab-ci.yml  API.md  Cargo.toml  Makefile  README.md  docker-compose.yml
assets/: ffdyndns.service  ffdyndns.toml
assets/deb-scripts/: postinst
assets/debian/: postinst
ffddns-web/: Cargo.toml
ffddns-web/src/: config.rs  db.rs  domain.rs  ffdyndns.rs  main.rs
ffddns-web/src/web/: api.rs  dns.rs  mod.rs  web.rs
ffddns-web/templates/: head.html  index.html  navbar.html  newdomain.html
src/: config.rs  db.rs  db2.rs  domain.rs  ffdyndns.rs  init.sql  main.rs  pdns.rs  zone_template.zone
src/db/: mod.rs  redis.rs  rocksdb.rs  sled.rs
src/nsupdate/: mod.rs  nsupdate.rs
src/web/: api.rs  dns.rs  mod.rs  web.rs
static/: main.css
templates/: base.html  domainlist.html  head.html  index.html  navbar.html  newdomain.html  newdomain.html.tera  node.html  nodelist.html
