[package]
name = "ffdyndns"
version = "0.0.0"
authors = ["Paul Maruhn <paulmaruhn@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocket 0.5.x dependencies
rocket = {version = "0.5.0-rc.1", features = ["json"]}
rocket_dyn_templates = {version = "0.1.0-rc.1", features =["tera"]}

# rocket 0.4.x dependencies
#rocket = "0.4.10"

chrono = {version = "0.4.19", features = ["serde"]}
rand = "0.8.3"
tera = "1.6.1"
log = "0.4.14"
serde_json = "1.0.64"
serde = {version = "1.0.125", features = ["derive"]}
toml = "0.5.8"
lazy_static = "1.4.0"
domain = "0.6.1"
rocksdb = "0.17.0"
rust-crypto = "0.2.36"
pretty_env_logger = "0.4.0"

[profile.release]
debug = true

[package.metadata.deb]
name = "ffdyndns"
depends = "dnsutils"
section = "Utilities"
conf-files = ["/etc/ffdyndns.toml"]
maintainer-scripts = "assets/debian"
assets = [
	# binary
    ["target/release/ffdyndns", "/usr/bin/", "755"],
    # web files
    ["templates/*", "/usr/lib/ffdyndns/templates/", "644"],
    ["static/*", "/usr/lib/ffdyndns/static/", "644"],
	# additional system files
    ["assets/ffdyndns.service", "/lib/systemd/system/", "664"],
    ["assets/ffdyndns.toml", "/etc/", "664"],
]
