[package]
name = "ffddns-web"
version = "0.1.0"
authors = ["Paul Maruhn <paulmaruhn@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = "*"
rusqlite = {version = "0.21", features = ["chrono", "serde_json"]}
chrono = {version = "0.4.19", features = ["serde"]}
rand = "0.8.3"
tera = "1.6.1"
log = "*"
serde_json = "1.0.64"
serde = {version = "1.0.125", features = ["derive"]}
toml = "0.5.8"
lazy_static = "1.4.0"
domain = "0.6.1"
rocksdb = "0.16.0"
leveldb = "0.8.6"
rust-crypto = "0.2.36"
